<resources>
    <string name="app_name">Lab 4</string>
    <string name="email">Enter your email address:</string>
    <string name="password">Type your password:</string>
    <string name="info"></string>
    <string name="button">Login</string>
    <string name="button2">Next page</string>
    <string name="newpagebutton">Go to chat</string>
    <string name="buttonRecieve">Recieve</string>
    <string name="buttonSend">Send</string>
    <string name="editTextChat">Type here</string>

</resources>