<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatRoomActivity">


    <ListView
        android:id="@+id/listViewChat"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/buttonSend"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <Button
        android:id="@+id/buttonRecieve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/buttonRecieve" />

    <Button
        android:id="@+id/buttonSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="322dp"
        android:layout_marginBottom="1dp"
        android:text="@string/buttonSend" />

    <EditText
        android:id="@+id/editTextChat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/buttonSend"
        android:layout_alignBottom="@id/buttonSend"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="182dp"
        android:layout_marginTop="-3dp"
        android:layout_marginRight="-182dp"
        android:layout_marginBottom="3dp"
        android:layout_toLeftOf="@id/buttonSend"
        android:ems="10"
        android:inputType="text"
        android:text="@string/editTextChat" />


</RelativeLayout>